Edited transfer learning notebook

--- a/Transfer-Learn-BERT.ipynb
+++ b/Transfer-Learn-BERT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transfering Learning Transformer based BERT model "
+    "# Transfer Learning Transformer based BERT model "
    ]
   },
   {
@@ -525,13 +525,6 @@
    "source": [
     "### The network achieves a 92.48% Validation accuracy with 2 epochs of Fine training. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -550,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
